new teacher manager class